# conways-game-of-life-cpp

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  imgui.ini
src/: CMakeLists.txt  game_state.cpp  game_state.h  main.cpp
